# ai-code-detection

./: .dockerignore  .gitattributes  .gitignore  API_README.md  Dockerfile  README.md  dataset_head.csv  pyproject.toml  run_code_embedding.py  streamlit_chatbot.py  test_api.py
ai_code_detector/: __init__.py  config.py  deep_learning_pipeline.py  finetune_pipeline.py  inference_pipeline.py  train_pipeline.py  trainer.py
ai_code_detector/api/: app.py  schema.py
ai_code_detector/core/: __init__.py  code_detector.py
ai_code_detector/models/: __init__.py  classifier_adapter.py  code_embedder.py  embedding_classifier.py  feature_extractor.py  unixcoder.py  unixcoder_classifier.py  unixcoder_embedder.py  xgboost_classifier.py
data/: dataset.csv  dataset_val.csv
models/: xgboost_importance.json  xgboost_model.pkl  xgboost_model_info.json
scripts/: download_dataset.py
src/: __init__.py  detect_ai_code.py  download_dataset.py  inference_pipeline.py  train_pipeline.py
src/models/: __init__.py  xgboost_model.py
