[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-code-detector"
version = "0.1.0"
description = "Code detection project using CoDET-M4 dataset"
authors = [
    {name = "User", email = "user@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "huggingface-hub>=0.31.2",
    "pyarrow>=20.0.0",
    "numpy>=2.2.5",
    "scikit-learn>=1.6.1",
    "xgboost>=3.0.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "optuna>=4.3.0",
    "uvicorn>=0.34.2",
    "fastapi>=0.115.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "mypy>=0.950",
    "isort>=5.12.0",
]

[tool.setuptools]
packages = ["ai_code_detector"]

[tool.hatch.build.targets.wheel]
packages = ["ai_code_detector"]
only-packages = true

[tool.pytest]
testpaths = ["tests"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120
remove_redundant_aliases = true 

[tool.pylint]
    [tool.pylint.master]
    [tool.pylint.messages_control]
    disable = [
      "logging-fstring-interpolation"
    ]
